# ms-learn-deploy-asssitant

./: .code-workspace  .gitignore  README.md
apps/front-api/: Makefile  README.md  database.py  deploy.sh  main.py  pyproject.toml
apps/queue-trigger/: README.md  function_app.py  local.env  local.settings.json  pyproject.toml  requirements.txt  sample_job.json
apps/web-extension/: manifest.json  package-lock.json  package.json
apps/web-extension/src/: App.tsx
apps/web-extension/src/contentScript/: script.ts
apps/worker-api/: .env.sample  .gitignore  Makefile  README.md  database.py  deploy.sh  generate.py  hash.py  local.env  main.py  push_code.py  pyproject.toml  save_repository.py  validate.py
apps/worker-api/prompts/: system.txt  user_ask.txt  user_fix.txt
apps/worker-api/quickstarts/: README.md
apps/worker-api/quickstarts/microsoft.appconfiguration/app-configuration-store/: azuredeploy.json
apps/worker-api/quickstarts/microsoft.appconfiguration/app-configuration-store-ff/: azuredeploy.json
apps/worker-api/quickstarts/microsoft.appconfiguration/app-configuration-store-keyvaultref/: azuredeploy.json
apps/worker-api/quickstarts/microsoft.compute/vm-simple-linux/: metadata.json
apps/worker-api/quickstarts/microsoft.documentdb/cosmosdb-sql-rbac/: azuredeploy.json
apps/worker-api/quickstarts/microsoft.keyvault/key-vault-create-rbac/: azuredeploy.json
apps/worker-api/quickstarts/microsoft.kubernetes/aks-azure-linux/: azuredeploy.json  metadata.json
apps/worker-api/quickstarts/microsoft.machinelearningservices/aistudio-network-restricted/: main.bicep
apps/worker-api/quickstarts/microsoft.machinelearningservices/aistudio-network-restricted/modules/: ai-hub.bicep
apps/worker-api/quickstarts/microsoft.maps/maps-indoormaps/: README.md  metadata.json
apps/worker-api/quickstarts/microsoft.network/azure-dns-new-zone/: azuredeploy.json
apps/worker-api/quickstarts/microsoft.network/nat-gateway-vnet/: azuredeploy.json
apps/worker-api/quickstarts/microsoft.network/route-server/: azuredeploy.json
apps/worker-api/quickstarts/microsoft.web/app-service-docs-linux/: azuredeploy.json
apps/worker-api/quickstarts/microsoft.web/private-webapp-with-app-gateway-and-apim/: azuredeploy.json
apps/worker-api/rag/: file_formatter.py.py  rag.py  upload_vector_db.py
apps/worker-api/rag/ai_search_index/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  (+361 more)
apps/worker-api/src/: azcommand.py  file_io.py  llm.py  urls.py  web_scraper.py
apps/worker-api/utils/: azcommand.py  filesys.py  github.py  parse.py  repository.py  web_scraper.py
